--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,18 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+
+
+    }
+
+    flavorDimensions "sfc"
+    productFlavors {
+        uitest {
+            dimension "sfc"
+        }
+        regular {
+            dimension "sfc"
+        }
     }
 }
 
@@ -34,4 +46,8 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.4.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
+
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.12'
+    compile 'com.google.dagger:dagger:2.12'
+    provided 'javax.annotation:jsr250-api:1.0'
 }
