--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,12 @@
 
         </activity>
 
+        <activity
+            android:name=".activities.AddNewsActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
+
         <receiver android:name=".receivers.InternetStateReceiver">
             <intent-filter>
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
