--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,12 +38,12 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 
     implementation 'org.mmtextview:mmtextview:1.9'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation "android.arch.persistence.room:runtime:1.1.0"
     annotationProcessor "android.arch.persistence.room:compiler:1.1.0"
 
-    compile 'android.arch.lifecycle:extensions:1.1.0'
+    implementation 'android.arch.lifecycle:extensions:1.1.0'
     annotationProcessor 'android.arch.lifecycle:compiler:1.1.0'
 
     implementation 'com.github.bumptech.glide:glide:4.7.1'
